force-app/main/default/objects/Aplikacja__c/Aplikacja__c.object-meta.xml
<CustomObject>
    <description>Aplikacja kandydata na oferte pracy</description>
    <label>Aplikacja</label>
    <nameField>
        <displayFormat>A-{0000000000}</displayFormat>
        <label>Numer Aplikacji</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Aplikacje</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>