force-app/main/default/objects/Aplikacja__c/fields/Data_zgloszenia__c.field-meta.xml
<CustomField>
    <fullName>Data_zgloszenia__c</fullName>
    <description>Data zgłoszenia aplikacji</description>
    <inlineHelpText>Data zgłoszenia aplikacji</inlineHelpText>
    <label>Data zgłoszenia</label>
    <required>true</required>
    <type>Date</type>
</CustomField>