force-app/main/default/objects/Aplikacja__c/fields/Kandydat__c.field-meta.xml
<CustomField>
    <fullName>Kandydat__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Aplikujący Kandydat</description>
    <inlineHelpText>Aplikujący Kandydat</inlineHelpText>
    <label>Kandydat</label>
    <referenceTo>Kandydat__c</referenceTo>
    <relationshipLabel>Aplikacje</relationshipLabel>
    <relationshipName>Aplikacje</relationshipName>
    <type>Lookup</type>
</CustomField>