force-app/main/default/objects/Aplikacja__c/fields/Ocena__c.field-meta.xml
<CustomField>
    <fullName>Ocena__c</fullName>
    <description>Ocena aplikacji</description>
    <inlineHelpText>Ocena aplikacji</inlineHelpText>
    <label>Ocena</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Do odrzucenia</fullName>
            </value>
            <value>
                <fullName>Średnia</fullName>
            </value>
            <value>
                <fullName>Bardzo dobra</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>