force-app/main/default/objects/Aplikacja__c/fields/Oferta_pracy__c.field-meta.xml
<CustomField>
    <fullName>Oferta_pracy__c</fullName>
    <description>Oferta pracy której dotyczy aplikacja</description>
    <inlineHelpText>Oferta pracy której dotyczy aplikacja</inlineHelpText>
    <label>Oferta pracy</label>
    <referenceTo>Oferta_pracy__c</referenceTo>
    <relationshipLabel>Aplikacje</relationshipLabel>
    <relationshipName>Aplikacje</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>