force-app/main/default/objects/Aplikacja__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Status aplikacji</description>
    <inlineHelpText>Status aplikacji</inlineHelpText>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nowa</fullName>
                <default>true</default>
                <label>Nowa</label>
            </value>
            <value>
                <fullName>W trakcie</fullName>
            </value>
            <value>
                <fullName>Zakończona</fullName>
            </value>
            <value>
                <fullName>Zatrudniony</fullName>
            </value>
            <value>
                <fullName>Odrzucona</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>