force-app/main/default/objects/Aplikacja__c/fields/Zrodlo_aplikacji__c.field-meta.xml
<CustomField>
    <fullName>Zrodlo_aplikacji__c</fullName>
    <description>Źródło aplikacji</description>
    <inlineHelpText>Źródło aplikacji</inlineHelpText>
    <label>Źródło aplikacji</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Strona kariery</fullName>
            </value>
            <value>
                <fullName>LinkedIn</fullName>
            </value>
            <value>
                <fullName>Polecenie</fullName>
            </value>
            <value>
                <fullName>Agencja</fullName>
            </value>
            <value>
                <fullName>Inne</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>