force-app/main/default/objects/Aplikacja__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Oferta_pracy__c</columns>
    <columns>Kandydat__c</columns>
    <columns>Data_zgloszenia__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>